<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecastFragment"
    android:orientation="vertical"
    android:id="@+id/weather_forecast_fragment">


    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WeatherFragment"

        android:padding="10dp">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_12c"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloudy"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paris"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ForecastFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/mon"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/partly_cloudy_n_24c_30c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/tue"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/sun" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/showers_n_24c_30c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/wed"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rain_n_22c_23c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/thu"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/scattered_rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scattered_showers_n_22c_27c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/fri"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mostly_cloudy_n_22c_30c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/sat"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/partly_cloudy_n_24c_28c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/sun"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/scattered_rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thunderstorms_n_25c_28c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/mon"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/scattered_rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scattered_thunderstorms_n_25c_28c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/tue"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/showers_n_24c_26c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_padding"
            android:paddingBottom="@dimen/list_padding">

            <TextView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:text="@string/wed"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="@dimen/list_text_width"
                android:layout_height="@dimen/list_text_height"
                android:src="@drawable/scattered_rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scattered_thunderstorms_n_23c_27c" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>